# kurbo-curve-fit-stroke

./: Cargo.toml  DEBUG_ANALYSIS.md  LICENSE.md  README.md  SKELETON_WEB_DEMO.md  SKELETON_WORKFLOW.md  TODO.md  out.txt  out_final.txt
.github/workflows/: deploy.yml
bezier-solver/: Cargo.toml
bezier-solver/src/: bending.rs  lib.rs  main.rs
curve_fitter/: .gitignore  Cargo.toml  README.md  build-wasm.sh  build.sh
curve_fitter/examples/: fidelity_probe.rs
curve_fitter/src/: golden_tests.rs  lib.rs  main.rs  spline.rs  stroke_refitter.rs  test_runner.rs  test_schema.rs  two_param_curve.rs  two_param_spline.rs  var_interpolatable_offset.rs  var_interpolatable_stroke.rs  var_interpolatable_stroker.rs  var_offset.rs  var_stroke.rs  var_stroker.rs  variable_stroke.rs  wasm.rs
curve_fitter/src/stroke_refitter/: extraction.rs  matching.rs  smoothing.rs
curve_fitter/tests/: circle-variable-width.json  corner-angle.json  letter-o.json  metapost-style.json  skeleton-preservation.json  straight-line.json  three-way-comparison.json  wave-constant-width.json  wave-simple.json
curve_fitter/tests/golden/: circle-variable-width--fit_curve.path  circle-variable-width--refit_stroke.path  circle-variable-width--stroke.path  corner-angle--fit_curve.path  corner-angle--refit_stroke_with_skeleton.path  corner-angle--stroke.path  letter-o--fit_curve.path  letter-o--refit_stroke.path  letter-o--stroke.path  metapost-style--fit_curve.path  metapost-style--refit_stroke_with_skeleton.path  metapost-style--stroke.path  skeleton-preservation--fit_curve.path  skeleton-preservation--refit_stroke.path  skeleton-preservation--refit_stroke_with_skeleton.path  skeleton-preservation--stroke.path  straight-line--fit_curve.path  straight-line--refit_stroke.path  straight-line--refit_stroke_with_skeleton.path  straight-line--stroke.path  three-way-comparison--fit_curve.path  three-way-comparison--refit_stroke.path  three-way-comparison--refit_stroke_with_skeleton.path  three-way-comparison--stroke.path  wave-constant-width--refit_stroke.path  wave-constant-width--refit_stroke_with_skeleton.path  wave-constant-width--stroke.path  wave-simple--refit_stroke.path  wave-simple--refit_stroke_with_skeleton.path  wave-simple--stroke.path
curve_fitter/web-demo/: demo.js  index.html
docs/images/: const-stroke.web
hobby/: Cargo.toml  README.md  build-wasm.sh
hobby/.cargo/: config.toml
hobby/src/: lib.rs  main.rs  point.rs  segment.rs  wasm.rs
hobby/web-demo/: README.md  demo.js  styles.css
web-demo/: Cargo.toml  build.sh  demo.js  index.html  styles.css
web-demo/src/: lib.rs
